--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "start": "next start"
   },
   "dependencies": {
+    "date-fns": "^2.16.1",
+    "eslint": "^7.17.0",
+    "jshint": "^2.12.0",
     "next": "^10.0.0",
+    "prettier": "^2.2.1",
+    "prettier-eslint": "^12.0.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "remark": "^13.0.0",
+    "remark-html": "^13.0.1"
   }
 }
