--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "date-fns": "^2.16.1",
     "eslint": "^7.17.0",
+    "gray-matter": "^4.0.2",
     "jshint": "^2.12.0",
     "next": "^10.0.0",
     "prettier": "^2.2.1",
